--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 /* ===================================intro 시작 */
+body, html {scroll-behavior: smooth;} /* 페이지 이동할 떄 부드럼게 넘기는 거 */
+nav {position: fixed; top: 53px; left: 50%; transform: translateX(-50%);}
+nav ul {display: flex; justify-items: center;}
+nav ul li {margin-left: 40px; font-family: "Red Hat Mono", monospace; color: #26290E; font-size: 1.3rem; cursor: pointer; padding-bottom: 10px;}
+nav ul li:nth-child(1) {margin: 0;}
+ul li.on{text-decoration: underline; font-weight: 500;}
 #introWrap {height: 100vh; padding: 0 111px; background-color: #A4A69B;}
 #introWrap header {color: #26290E; font-size: 1.50rem; position: relative; top: 53px; display: flex; justify-content: space-between; align-items: center;}
 #introWrap header p {font-family: "Red Hat Mono", monospace;}
-#introWrap header nav { position: absolute; width: max-content; left: 50%; transform: translateX(-50%);}
-#introWrap header nav .gnb {display: flex;}
-#introWrap header nav .gnb li {margin-left: 40px;}
-#introWrap header nav .gnb li:nth-child(1) {margin: 0;}
-#introWrap header nav .gnb li a {font-family: "Red Hat Mono", monospace;}
 #introWrap h1 {font-family: "Gupter", serif; position: absolute; bottom: 380px; color: #D0FFCD; font-size: 12.50rem;}
 #introWrap .introName {position: absolute; bottom: 350px; display: flex;}
 #introWrap .introName img {}
@@ -15,16 +16,60 @@
 #introWrap .borderBottom {border: 1px solid #D0FFCD; width: 100%; position: absolute; bottom: 75px; left: 0;}
 /* ===================================ProfileWrap 시작 */
 #profileWrap {height: 100vh; padding: 0 111px; background-color: #F7FFF7; color: #6C6A5D;}
-#profileWrap > p {font-size: 2.00rem; position: absolute; top: 111px;}
-#profileWrap .profile {display: flex; margin-top: 194px;}
-#profileWrap .pro_left {}
-#profileWrap .pro_left img { margin-bottom: 60px; }
+#profileWrap > p {font-size: 2.00rem; padding-top: 111px;}
+#profileWrap .profile {display: flex; margin-top: 60px;}
+#profileWrap .pro_left {border-right: 1px solid #D0FFCD;}
+#profileWrap .pro_left img { margin-bottom: 60px; margin-right: 158px;}
 #profileWrap .pro_left .name {margin-bottom: 16px; font-size: 1.25rem; font-weight: 600; color: #6C6A5D;}
-#profileWrap .pro_left dl {display: flex; margin-bottom: 10px;font-size: 1.06rem; }
+#profileWrap .pro_left dl {display: flex; margin-bottom: 10px; font-size: 1.06rem; }
 #profileWrap .pro_left dl dt {font-weight: 600;}
 #profileWrap .pro_left dl dd {font-weight: 500;}
 #profileWrap .pro_left dl dt {margin-right: 26px;}
 #profileWrap .pro_left .Birth dt {margin-right: 37px;}
 #profileWrap .pro_left .sns dt {margin-right: 44px;}
-#profileWrap .pro_right {padding-left: 318px;}
-#profileWrap .borderCenter {border: 1px solid #D0FFCD; height: 636px; position: absolute; left: 816px; top: 194px;}
+#profileWrap .pro_right {margin-left: 158px;}
+#profileWrap .pro_right dl {margin-bottom: 10px; font-size: 1.06rem;}
+#profileWrap .pro_right dl dt {margin-bottom: 26px; font-size: 1.06rem;}
+#profileWrap .pro_right dl dd {margin-bottom: 10px; font-size: 1.06rem;}
+#profileWrap .pro_right .tool {display: flex; margin-right: 12px;}
+/* #profileWrap .borderCenter {border: 1px solid #D0FFCD; height: 636px; position: absolute; left: 816px; top: 194px;} */
+/* ===================================HDEX 시작 */
+#hdexWrap {display: flex;width: 100%; height: 100vh; background: #F7F7F7; padding: 0 111px; justify-content: space-between;}
+#hdexWrap .hdexLeft {padding-bottom: 113px; margin-top: 48px;}
+#hdexWrap .hdexLeft h1 {color: #26290E; font-size: 2rem; font-weight: 500; margin-bottom: 20px; display: fixed;}
+#hdexWrap .hdexLeft h2 {font-size: 5rem; font-weight: bold; letter-spacing: -3px;}
+#hdexWrap .hdexLeft h3 {font-size: 3.44rem; line-height: 50px; letter-spacing: -3px; margin: 30px 0 290px;}
+#hdexWrap .hdexLeft .infor {}
+#hdexWrap .hdexLeft .infor dl {display: flex; margin-bottom: 30px; vertical-align: middle;}
+#hdexWrap .hdexLeft .infor dl:last-child {align-items: center;}
+#hdexWrap .hdexLeft .infor dt {margin-right: 10px; font-size: 1.38rem; font-weight: bold;}
+#hdexWrap .hdexLeft .infor dd {font-size: 1.38rem; margin-right: 10px;}
+#hdexWrap .hdexLeft .button {}
+#hdexWrap .hdexLeft .button a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 10px;}
+#hdexWrap .hdexRight {margin-top: 208px;}
+/* ===================================M-Mall 시작 */
+#mMallWrap {display: flex;width: 100%; height: 100vh; background: #FDFDE6; padding: 0 111px; justify-content: space-between;}
+#mMallWrap .mMallLeft {padding-bottom: 113px; margin-top: 111px;}
+#mMallWrap .mMallLeft h2 {font-size: 5rem; font-weight: bold; letter-spacing: -3px;}
+#mMallWrap .mMallLeft h3 {font-size: 3.44rem; line-height: 50px; letter-spacing: -3px; margin: 30px 0 290px;}
+#mMallWrap .mMallLeft .infor {}
+#mMallWrap .mMallLeft .infor dl {display: flex; margin-bottom: 30px; vertical-align: middle;}
+#mMallWrap .mMallLeft .infor dl:last-child {align-items: center;}
+#mMallWrap .mMallLeft .infor dt {margin-right: 10px; font-size: 1.38rem; font-weight: bold;}
+#mMallWrap .mMallLeft .infor dd {font-size: 1.38rem; margin-right: 10px;}
+#mMallWrap .mMallLeft .button {}
+#mMallWrap .mMallLeft .button a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 10px;}
+#mMallWrap .mMallRight {margin-top: 208px;}
+/* ===================================madecaPrime 시작 */
+#madecaWrap {display: flex;width: 100%; height: 100vh; background: #ECF1FA; padding: 0 111px; justify-content: space-between;}
+#madecaWrap .madecaLeft {padding-bottom: 113px; margin-top: 111px;}
+#madecaWrap .madecaLeft h2 {font-size: 5rem; font-weight: bold; letter-spacing: -3px;}
+#madecaWrap .madecaLeft h3 {font-size: 3.44rem; line-height: 50px; letter-spacing: -3px; margin: 30px 0 290px;}
+#madecaWrap .madecaLeft .infor {}
+#madecaWrap .madecaLeft .infor dl {display: flex; margin-bottom: 30px; vertical-align: middle;}
+#madecaWrap .madecaLeft .infor dl:last-child {align-items: center;}
+#madecaWrap .madecaLeft .infor dt {margin-right: 10px; font-size: 1.38rem; font-weight: bold;}
+#madecaWrap .madecaLeft .infor dd {font-size: 1.38rem; margin-right: 10px;}
+#madecaWrap .madecaLeft .button {}
+#madecaWrap .madecaLeft .button a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 10px;}
+#madecaWrap .madecaRight {margin-top: 208px;}
