--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,9 @@ ul li.on::after {content: '';display: inline-block; width: 100%; height: 1.4px; 
 #hdexWrap .hdexLeft .infor dl:last-child {align-items: center;}
 #hdexWrap .hdexLeft .infor dt {margin-right: 10px; font-size: 1.38rem; font-weight: bold;}
 #hdexWrap .hdexLeft .infor dd {font-size: 1.38rem; margin-right: 10px;}
-#hdexWrap .hdexLeft .button {}
-#hdexWrap .hdexLeft .button a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 10px;}
+#hdexWrap .hdexLeft .button {display: flex;}
+#hdexWrap .hdexLeft .button li a {display: block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 15px; transition: all 0.8s;}
+#hdexWrap .hdexLeft .button li:hover a {color: #f2f2f2; background-color: #414141;}
 #hdexWrap .hdexRight {margin-top: 208px;}
 /* ===================================M-Mall 시작 */
 #mMallWrap {display: flex;width: 100%; height: 100vh; background: #E6F1FB; padding: 0 111px; justify-content: space-between;}
@@ -62,8 +63,9 @@ ul li.on::after {content: '';display: inline-block; width: 100%; height: 1.4px; 
 #mMallWrap .mMallLeft .infor dl:last-child {align-items: center;}
 #mMallWrap .mMallLeft .infor dt {margin-right: 10px; font-size: 1.38rem; font-weight: bold;}
 #mMallWrap .mMallLeft .infor dd {font-size: 1.38rem; margin-right: 10px;}
-#mMallWrap .mMallLeft .button {}
-#mMallWrap .mMallLeft .button a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 10px;}
+#mMallWrap .mMallLeft .button {display: flex;}
+#mMallWrap .mMallLeft .button li a {display: block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 15px; transition: all 0.8s;}
+#mMallWrap .mMallLeft .button li:hover a {color: #f2f2f2; background-color: #414141;}
 #mMallWrap .mMallRight {margin-top: 208px;}
 /* ===================================madecaPrime 시작 */
 #madecaWrap {display: flex;width: 100%; height: 100vh; background: #F4ECF6; padding: 0 111px; justify-content: space-between;}
@@ -75,6 +77,7 @@ ul li.on::after {content: '';display: inline-block; width: 100%; height: 1.4px; 
 #madecaWrap .madecaLeft .infor dl:last-child {align-items: center;}
 #madecaWrap .madecaLeft .infor dt {margin-right: 10px; font-size: 1.38rem; font-weight: bold;}
 #madecaWrap .madecaLeft .infor dd {font-size: 1.38rem; margin-right: 10px;}
-#madecaWrap .madecaLeft .button {}
-#madecaWrap .madecaLeft .button a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 10px;}
+#madecaWrap .madecaLeft .button {display: flex;}
+#madecaWrap .madecaLeft .button li a {display: inline-block; font-size: 0.88rem; color: #414141; width: 115px; line-height: 30px; text-align: center; border: 1px solid #868686; margin-right: 15px; transition: all 0.8s;}
+#madecaWrap .madecaLeft .button li:hover a {color: #f2f2f2; background-color: #414141;}
 #madecaWrap .madecaRight {margin-top: 208px;}
